Merge:   changes/scottb/jso -r1776:1933 Into:   trunk@1933
Review by: spoon



git-svn-id: https://google-web-toolkit.googlecode.com/svn/trunk@1934 8db76d5a-ed1c-0410-87a9-c151d255dfc7